# wgsl-wesl-zed

./: Cargo.toml  README.md  extension.toml
languages/wgsl/: config.toml  highlights.scm  locals.scm
src/: lib.rs
test/naga-oil/: my_module.wgsl  test.wgsl
test/wesl/: fullscreen_quad.wesl  main.wesl  mandelbrot.wesl
test/wgsl/: compute.wgsl  shader.wgsl
